Update and rename redlight-led-diode-therapy-hair-loss-nyc.html to redlight-led-diode-therapy-hair-loss-brooklyn.html

--- a/redlight-led-diode-therapy-hair-loss-brooklyn.html
+++ b/redlight-led-diode-therapy-hair-loss-brooklyn.html
@@ -49,9 +49,9 @@ src="https://www.facebook.com/tr?id=883315832122742&ev=PageView&noscript=1"
 
 <link rel="icon" href="images2020/favicon.ico" type="image/x-icon" />
 <link rel="canonical" href="https://www.thestudiomd.com/redlight-led-diode-therapy-hair-loss-nyc.html" />
-<title>Hair Regrowth | Redlight & LED Therapy | New York City</title>
-<meta name="Description" content="Best Hair Regrowth Center, with Redlight LED Therapy, PRP injections, FUE Hair Transplant, New York City, Manhattan, Queens, Brooklyn, Turkey"/>
-<meta name="Keywords" content="Best Redlight LED Hair Therapy, Hair Growth, Regrowth, Cost, Before and, New York City, Manhattan, Queens, Brooklyn, Turkey"/>
+<title>Hair Regrowth | Redlight & LED Therapy | StudioMD Brooklyn</title>
+<meta name="Description" content="Increase hair count & hair density with no side effects. Best Redlight LED Therapy in Brooklyn. Safe & effective. Book a free consultation now at StudioMD."/>
+<meta name="Keywords" content="Best Redlight LED Hair Therapy, Hair Growth, Regrowth, Cost, Before and after, Brooklyn"/>
 <link href="p7lbm/p7LBM-Core.css" rel="stylesheet" type="text/css" media="all" />
 <link href="p7lbm/p7LBM-Custom-01.css" rel="stylesheet" type="text/css" media="all" />
 <link href="studiostyles2020tx.css" rel="stylesheet" type="text/css" media="all" />
@@ -316,24 +316,17 @@ ACCORDION - Style the element that is used to open and close the accordion class
 <div class="lbm-col-wrapper lbm-centered">
 <div class="lbm-column width-100">
 <br>
-<span style="font-size: 4vh; font-weight: 300">ONE HAPPY FUE TRANSPLANT PATIENT</span><br>
+<span style="font-size: 4vh; font-weight: 300">INCREASE HAIR COUNT, HAIR DENSITY, AND HAIR THICKNESS, WITH NO SIDE EFFECTS</span><br>
 <br>
 </div></div></div>
 
 <div class="lbm-row">
 <div class="lbm-col-wrapper">
 <div class="lbm-column width-50 lbm-no-pad"><br><br><br><br>
-<span style="position: relative; left: 12%; font-family: 'doppio-one'; font-size: 4vmax; color: white; background-color:rgba(160,136,111,1.00); font-weight: 900; text-align: left">  &nbsp;1,100 Grafts </span><br><br>
-<span style="position: relative; left: 2%; font-family: 'doppio-one'; font-size: 4vmax; color: #69503F; background-color: white; font-weight: 900; text-align: left">12 MONTHS</span><br><br>
-<span style="position: relative; left: 25%; font-family: 'doppio-one'; font-size: 4vmax; color: white;  background-color:rgba(160,136,111,1.00); font-weight: 900; text-align: left">  &nbsp;$4,500 TOTAL </span><br><br><br>
 <div class="line" style="margin-left: 10%; margin-right: 10%"></div><br />
-<div style="font-family: philosopher; font-size: 3vmax; color: #69503F; font-weight: 500; text-align: center"> NO VISIBLE SCAR</div>
-<div style="font-family: philosopher; font-size: 3vmax; color: #69503F; font-weight: 500; text-align: center"> MINIMALLY INVASIVE</div>
-<div style="font-family: philosopher; font-size: 3vmax; color: #69503F; font-weight: 500; text-align: center"> FAST RECOVERY</div>
+<div style="font-family: philosopher; font-size: 3vmax; color: #69503F; font-weight: 500; text-align: center">LED Light Therapy is a safe, effective, and natural treatment option for hair loss, backed by a strong base of peer-reviewed clinical research.</div>
 </div>
-<div class="lbm-column width-50 lbm-no-pad">
-<img src="images2020/backbanners/hair_transplant_banner2.jpg" alt="hair transplant fue nyc" style="max-width: 100%">
-</div></div></div>
+</div></div>
 
 
 <div class="lbm-row backgroundvafasection">
@@ -404,74 +397,54 @@ els[i].classList[fnName](className);
 <h3 itemprop="name">Frequently Asked Questions</h3>
 
 <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name">WHAT IS LOW-LEVEL LIGHT LASER THERAPY FOR HAIR LOSS?</span></div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">Low-level Light Laser Therapy (LLLT), also referred to as <a href="https://www.webmd.com/skin-problems-and-treatments/red-light-therapy#1" target="_blank" rel="nofollow">Red Light Therapy</a> or cold laser therapy, has been increasingly used to promote hair growth and reduce hair loss. The laser light that’s used in LLLT produces a particular wavelength, which has a unique ability to be absorbed by the molecules of the hair follicles. The light helps to shift hair follicles into the growth stage, leading to thicker hair shafts and a fuller look. The procedure is known to be a safe, pain-free, and less invasive alternative to hair transplant surgeries.</span>
+<div class="accordion"><span itemprop="name">HOW DOES LOW-LEVEL LASER THERAPY WORK FOR HAIR LOSS?</span></div>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">LED Light Therapy is a cosmetic procedure that uses varying wavelengths of light, such as near-infrared, red, yellow, green, and blue, or combinations of these, depending on your concern. As a hair growth treatment, it aids in increasing blood circulation, oxygenation, and restoration of the hair follicles’ natural cellular activity.</span>
 </div></div>
 
 <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name">HOW DOES LOW-LEVEL LIGHT LASER FOR HAIR LOSS WORK?</span></div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">The treatment’s mechanism uses a bio-energy and ultra pulse laser irradiation of light directly on the affected area of hair loss. Laser light is launched into the roots of the hair follicle, through the laser wavelength 650nm light. The directed energy activates the shrinking hair follicle cells, increasing the blood supply around the capillaries and the blood circulation around the hair follicle. The whole process promotes better oxygenation. Just like watering a small tree, regarding each sprout, to make it grow faster into a healthy exuberant treetop.<br />Results may vary</span></div></div>
-
-<div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name">WHAT HAPPENS DURING THE LED HAIR REGROWTH PROCEDURE?</span></div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">During the session, the therapy machine will be placed over the patient’s head. The laser hood looks similar to a hooded dryer at the hairdresser. It is a static device which holds several laser diodes that emit a 650nm wavelength of light, delivering low level therapy for the hair follicles. The device will target the full scalp at once, with multiple lasers pointed at the most commonly affected areas for better results.  The machine is fully adjustable so  each patient can comfortably during the treatment that usually lasts under 30 min.</span>
+<div class="accordion"><span itemprop="name">DOES LASER LIGHT THERAPY REGROW HAIR?</span></div>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">Although it is very effective at treating thinning hair, it can’t cause hair to grow back in follicles that have already disappeared. LLLT only works in active follicles, so it’s advisable as a treatment in the early stages of hair loss.</span>
 </div></div>
 
 <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name">IS LOW-LEVEL LIGHT THERAPY FOR HAIR LOSS PAINFUL? </span></div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">Not only is it not a painful treatment, but patients do not feel anything at all under the machine, and the session takes only around 25 minutes.</span>
+<div class="accordion"><span itemprop="name">WHAT TO EXPECT DURING LOW-LEVEL LIGHT LASER THERAPY?</span></div>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">LLLT is administered through individual light sources in a helmet or cap, or sometimes even a laser comb. The lasers emit very little heat wavelengths for a prolonged time, meaning that they won’t cause damage to the skin or hair follicles, making it a very safe treatment. Overall, it's most effective on areas of the scalp where the hair is still present, but thinning.</span>
 </div></div>
 
 <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name">WHICH CONDITIONS CAN BE TREATED WITH RED LIGHT THERAPY?</span></div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">The low-level laser sessions are suitable for those suffering from hair loss, hair thinning, alopecia, or any other patient that has in view working to revitalize and rejuvenate the hair follicles found beneath the scalp. The most common conditions treated with Red Light Therapy are Androgenetic Alopecia (male and female pattern baldness) and Alopecia Areata.
-With male pattern baldness, hair loss typically occurs on the top and front of the head. With female pattern baldness, thinning occurs on the top and crown of the head. Alopecia areata is an autoimmune disorder that causes hair to fall out in small patches all around the scalp.<br />Red Light Therapy also shows significant results in patients with less severe conditions, such as hair thinning and damaged or broken hair.<br>* Results may vary</span>
+<div class="accordion"><span itemprop="name">WHAT CAN RED LIGHT THERAPY TREAT?</span></div>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">Red light therapy is frequently used in sports medicine to reduce inflammation and speed the healing of injuries. It’s also highly recommended in plastic surgery aftercare. From speeding up the amount of time it takes the body to heal and decreasing inflammation to speeding up hair growth, red light therapy is that good.</span>
 </div></div>
-
 
 <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name">WHEN RED LIGHT THERAPY DOESN’T WORK FOR HAIR LOSS?</span></div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">It’s important to note that Low-level Light Therapy is not recommended in the course of hair loss due to chemotherapy. The same applies to hair loss due to the side effects of other medications. In such scenarios, hair loss will continue until the treatment is stopped. Also, permanently damaged hair follicles that have been destroyed due to injury, surgery or burns, don’t respond to the therapy and will not grow back.<br />
-* Results may vary</span>
+<div class="accordion"><span itemprop="name">DO I NEED GOGGLES FOR LED LIGHT THERAPY?</span></div>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">Although it is safer on the eyes than traditional lasers, proper eye protection should always be used while undergoing led light therapy. Also, because the light is so bright, it can be very uncomfortable on your eyes.</span>
 </div></div>
-
 
 <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name">HOW LONG DOES IT TAKE TO SEE RED LIGHT THERAPY RESULTS?</span></div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">Everyone reacts differently, depending on their age and the condition of their hair loss. In general, the best results can be noticed over an 8 – 12 week period.<br />* Results may vary</span>
+<div class="accordion"><span itemprop="name">HOW LONG ARE THE SESSIONS OF LED THERAPY?</span></div>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">LED therapy sessions should last between 10-30 minutes on average. In our experience best results are obtained from consistent 20 minutes sessions. We also recommend a breathing space of 48 hours between treatments.</span>
 </div></div>
-
 
 <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name">IS RED LIGHT THERAPY FOR HAIR LOSS EFFECTIVE?</span></div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">Several studies support red light therapy as an effective treatment for hair loss. A few examples:<br>
-&#9679; 2017 <a href="https://www.ncbi.nlm.nih.gov/pubmed/28328705" target="_blank" rel="nofollow">study on women</a> found a 51 percent increase in hair count with red light laser therapy;<br>
-&#9679; 2017 <a href="https://www.ncbi.nlm.nih.gov/pubmed/27114071" target="_blank" rel="nofollow">analysis reported significant improvements in hair count</a>, hair strength as well as hair density<br>
-&#9679; 2018 meta-analysis reviewed over 20 studies and concluded that <a href="https://www.ncbi.nlm.nih.gov/pubmed/29797431" target="_blank" rel="nofollow">red light therapy</a> had a significant effect at treating hair loss with no side effects<br>
-&#9679; 2018 <a href="https://www.ncbi.nlm.nih.gov/pubmed/29957664" target="_blank" rel="nofollow">study</a> found that red light therapy is an effective and safe treatment for pattern baldness;<br>
-&#9679; 2019 study examined men with <a href="https://www.ncbi.nlm.nih.gov/pubmed/30843235" target="_blank" rel="nofollow">male pattern baldness</a> and found that red light enhanced hair follicle cell function.<br />
-* Results may vary</span>
+<div class="accordion"><span itemprop="name">IS LED LIGHT THERAPY SAFE?</span></div>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">LED Light Therapy is a non-invasive treatment that has been used effectively for more than 15 years for both aesthetic and medical applications. Unlike other types of light therapy, LED technology produces a pure light wavelength and does not contain ultraviolet rays. This means that it is safe for use and cannot cause sunburn in your skin.</span>
 </div></div>
-
 
 <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name">ARE THERE ANY SIDE EFFECTS TO LOW-LEVEL LIGHT LASER TREATMENT?</span></div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">In terms of side effects, there aren’t any that are particularly serious, but negative effects may occur. As a consequence of light therapy, patients can complain of irritability, headaches, eye strain, sleep disturbances, and insomnia. Mild visual side effects are not unusual but remit promptly. <br />
-* Results may vary</span>
+<div class="accordion"><span itemprop="name">IS RED LIGHT (LED) THERAPY EFFECTIVE IN TREATING CHEMOTHERAPY-INDUCED HAIR LOSS?</span></div>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">Even though recent studies have shown great promise for hair regrowth after chemotherapy, the current therapeutic approach is still to be cautious of potentially harmful effects from the use of LLLT in patients with cancer. You should always consult your doctor before beginning any new treatment, especially if you have been dealing with any health distress.</span>
 </div></div>
-
 
 <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name">HOWM MUCH IS LED REDLIGHT LASER THERAPY FOR HAIR LOSS?</span></div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">Costs for laser hair loss therapy starts from $75 per session. The number of sessions required will vary depending on the extent of the patient's hair loss. As a reference, it is usually recommended a six-month treatment program for best results, with weekly appointments for laser treatment.</span>
+<div class="accordion"><span itemprop="name">IS LOW-LEVEL LASER THERAPY EXPENSIVE?</span></div>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">The final cost of LED Therapy depends on the number of sessions required and whether you're combining it with other treatments. Call or email us to learn more about pricing and financing options.</span>
 </div></div>
-
 
 <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name">WHERE REDLIGHT LED LASER TREATMENT NEAR ME IN NEW YORK? </span></div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">StudioMD NYC locations offer the latest laser technology: Diode Laser Hair Regrowth Machine.  Book your appointment at our Soho or Midtown locations now</span>
+<div class="accordion"><span itemprop="name">WHERE IS THE BEST PLACE TO GET A LOW-LEVEL LIGHT THERAPY FOR HAIR LOSS IN BROOKLYN?</span></div>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">At StudioMD Brooklyn we'll discuss all the different therapies, procedures, and products that may be most effective for your individual case. We’ll come up with a treatment plan that really helps your hair loss. And if you’re considering LLLT or wondering if it’s the right treatment option for you, book an appointment today and we’ll be happy to see you about your hair.</span>
 </div></div>
-
 
 </div>
 <div class="lbm-column width-15">
