Update and rename redlight-led-diode-therapy-hair-loss-brooklyn.html to redlight-led-diode-therapy-hair-loss-long-island.html

--- a/redlight-led-diode-therapy-hair-loss-long-island.html
+++ b/redlight-led-diode-therapy-hair-loss-long-island.html
@@ -48,10 +48,10 @@ src="https://www.facebook.com/tr?id=883315832122742&ev=PageView&noscript=1"
 <!-- End Facebook Pixel Code -->
 
 <link rel="icon" href="images2020/favicon.ico" type="image/x-icon" />
-<link rel="canonical" href="https://www.thestudiomd.com/redlight-led-diode-therapy-hair-loss-booklyn.html" />
-<title>Hair Regrowth | Redlight & LED Therapy | StudioMD Brooklyn</title>
-<meta name="Description" content="Increase hair count & hair density with no side effects. Best Redlight LED Therapy in Brooklyn. Safe & effective. Book a free consultation now at StudioMD."/>
-<meta name="Keywords" content="Best Redlight LED Hair Therapy, Hair Growth, Regrowth, Cost, Before and after, Brooklyn"/>
+<link rel="canonical" href="https://www.thestudiomd.com/redlight-led-diode-therapy-hair-loss-long-island.html" />
+<title>Hair Regrowth | Redlight & LED Therapy | StudioMD Long Island</title>
+<meta name="Description" content="Increase hair count & hair density with no side effects. Best Redlight LED Therapy in Long Island. Safe & effective. Book a free consultation now at StudioMD."/>
+<meta name="Keywords" content="Best Redlight LED Hair Therapy Long Island, Hair Growth, Regrowth, Cost, Before and after"/>
 <link href="p7lbm/p7LBM-Core.css" rel="stylesheet" type="text/css" media="all" />
 <link href="p7lbm/p7LBM-Custom-01.css" rel="stylesheet" type="text/css" media="all" />
 <link href="studiostyles2020tx.css" rel="stylesheet" type="text/css" media="all" />
@@ -316,7 +316,7 @@ ACCORDION - Style the element that is used to open and close the accordion class
 <div class="lbm-col-wrapper lbm-centered">
 <div class="lbm-column width-100">
 <br>
-<span style="font-size: 4vh; font-weight: 300">INCREASE HAIR COUNT, HAIR DENSITY, AND HAIR THICKNESS, WITH NO SIDE EFFECTS</span><br>
+<span style="font-size: 4vh; font-weight: 300">RED LIGHT THERAPY SPEEDS UP HEALING AND PROMPTS YOUR BODY TO GROW HAIR FASTER AND STRONGER.</span><br>
 <br>
 </div></div></div>
 
@@ -324,7 +324,7 @@ ACCORDION - Style the element that is used to open and close the accordion class
 <div class="lbm-col-wrapper">
 <div class="lbm-column width-50 lbm-no-pad"><br><br><br><br>
 <div class="line" style="margin-left: 10%; margin-right: 10%"></div><br />
-<div style="font-family: philosopher; font-size: 3vmax; color: #69503F; font-weight: 500; text-align: center">LED Light Therapy is a safe, effective, and natural treatment option for hair loss, backed by a strong base of peer-reviewed clinical research.</div>
+<div style="font-family: philosopher; font-size: 3vmax; color: #69503F; font-weight: 500; text-align: center">With a success rate of more than 80%, Red Light Therapy is a highly effective form of hair growth therapy for both men and women.</div>
 </div>
 </div></div>
 
@@ -397,53 +397,53 @@ els[i].classList[fnName](className);
 <h3 itemprop="name">Frequently Asked Questions</h3>
 
 <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name">HOW DOES LOW-LEVEL LASER THERAPY WORK FOR HAIR LOSS?</span></div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">LED Light Therapy is a cosmetic procedure that uses varying wavelengths of light, such as near-infrared, red, yellow, green, and blue, or combinations of these, depending on your concern. As a hair growth treatment, it aids in increasing blood circulation, oxygenation, and restoration of the hair follicles’ natural cellular activity.</span>
+<div class="accordion"><span itemprop="name">HOW DO I STIMULATE HAIR GROWTH?</span></div>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">Low-Level Light Therapy (LLLT) is a safe, effective, and natural treatment for hair loss, backed by a strong base of peer-reviewed clinical research. A treatment that is not only known to increase hair count, hair density, and hair thickness for men and women alike but that also comes without any negative side effects.</span>
 </div></div>
 
 <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name">DOES LASER LIGHT THERAPY REGROW HAIR?</span></div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">Although it is very effective at treating thinning hair, it can’t cause hair to grow back in follicles that have already disappeared. LLLT only works in active follicles, so it’s advisable as a treatment in the early stages of hair loss.</span>
+<div class="accordion"><span itemprop="name">HOW EFFECTIVE IS LIGHT THERAPY FOR HAIR LOSS?</span></div>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">A meta-analysis from 2018 reviewed different 22 studies comparing light laser therapy to other common treatments - such as hormone-regulating drugs like Finasteride and Dutasteride - and researchers concluded that red light therapy had shown superior results. Additionally, unlike many of the drugs reviewed in this meta-analysis, LLLT brings no negative side effects.</span>
 </div></div>
 
 <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name">WHAT TO EXPECT DURING LOW-LEVEL LIGHT LASER THERAPY?</span></div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">LLLT is administered through individual light sources in a helmet or cap, or sometimes even a laser comb. The lasers emit very little heat wavelengths for a prolonged time, meaning that they won’t cause damage to the skin or hair follicles, making it a very safe treatment. Overall, it's most effective on areas of the scalp where the hair is still present, but thinning.</span>
+<div class="accordion"><span itemprop="name">HOW DOES LLLT WORK FOR HAIR LOSS?</span></div>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">The laser light that’s used in LLLT produces a particular wavelength that can be absorbed by the molecules of the hair follicles. When the light penetrates the scalp, it stimulates the stem cells responsible for the regeneration of the hair follicles, encouraging hair regrowth. At the same time, it increases blood flow in the targeted region of the scalp, promoting thicker hair shafts and overall fuller-looking hair.</span>
 </div></div>
 
 <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name">WHAT CAN RED LIGHT THERAPY TREAT?</span></div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">Red light therapy is frequently used in sports medicine to reduce inflammation and speed the healing of injuries. It’s also highly recommended in plastic surgery aftercare. From speeding up the amount of time it takes the body to heal and decreasing inflammation to speeding up hair growth, red light therapy is that good.</span>
+<div class="accordion"><span itemprop="name">CAN RED LIGHT THERAPY REVERSE GRAY HAIR?</span></div>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">First of all, it is important to distinguish gray hair that occurs because of natural aging from gray hair that happened due to episodic stress. Because the graying that occurs because of aging is generally not reversible. However, the graying associated with stress can be reversible with Red Light Therapy.</span>
 </div></div>
 
 <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name">DO I NEED GOGGLES FOR LED LIGHT THERAPY?</span></div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">Although it is safer on the eyes than traditional lasers, proper eye protection should always be used while undergoing led light therapy. Also, because the light is so bright, it can be very uncomfortable on your eyes.</span>
+<div class="accordion"><span itemprop="name">CAN RED LIGHT THERAPY DAMAGE YOUR HAIR?</span></div>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">Red light therapy is generally considered safe, but there are guidelines. Having too much light or too many sessions close together can cause damage to your hair. You should always follow the customized therapy plan and timeline that your doctor has designed considering your unique treatment.</span>
 </div></div>
 
 <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name">HOW LONG ARE THE SESSIONS OF LED THERAPY?</span></div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">LED therapy sessions should last between 10-30 minutes on average. In our experience best results are obtained from consistent 20 minutes sessions. We also recommend a breathing space of 48 hours between treatments.</span>
+<div class="accordion"><span itemprop="name">ARE THERE ANY SIDE EFFECTS OF RED LIGHT THERAPY?</span></div>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">LLLT has demonstrated a remarkably low incidence of adverse effects and it has been used over the last 50 years for several medical conditions. Regarding specifically hair growth, the only adverse report was a temporary onset of hair shedding 1-2 months after starting treatment.</span>
 </div></div>
 
 <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name">IS LED LIGHT THERAPY SAFE?</span></div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">LED Light Therapy is a non-invasive treatment that has been used effectively for more than 15 years for both aesthetic and medical applications. Unlike other types of light therapy, LED technology produces a pure light wavelength and does not contain ultraviolet rays. This means that it is safe for use and cannot cause sunburn in your skin.</span>
+<div class="accordion"><span itemprop="name">CAN PEOPLE OF ALL AGES BENEFIT FROM LLLT?</span></div>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">Even though there is no ideal age, it's best to start LLLT as soon as possible to achieve maximum hair restoration. The best results occur when the therapy is used in the first stages of hair loss or cases of partial hair loss. Combining LLLT treatment with other therapies can also help to optimize results in more advanced stages of hair loss.</span>
 </div></div>
 
 <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name">IS RED LIGHT (LED) THERAPY EFFECTIVE IN TREATING CHEMOTHERAPY-INDUCED HAIR LOSS?</span></div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">Even though recent studies have shown great promise for hair regrowth after chemotherapy, the current therapeutic approach is still to be cautious of potentially harmful effects from the use of LLLT in patients with cancer. You should always consult your doctor before beginning any new treatment, especially if you have been dealing with any health distress.</span>
+<div class="accordion"><span itemprop="name">IS IT RECOMMENDED TO USE LED LIGHT THERAPY AFTER HAIR TRANSPLANT SURGERY?</span></div>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">After transplant surgery, it is important to protect your scalp from contact with any "foreign object". Since many LLLT helmets have teeth or spikes that are studded with a laser, you should not use such devices as they can damage your transplant. If you have had hair surgery recently, check with your doctor the best timeline to start or resume your red light therapy in the future.</span>
 </div></div>
 
 <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name">IS LOW-LEVEL LASER THERAPY EXPENSIVE?</span></div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">The final cost of LED Therapy depends on the number of sessions required and whether you're combining it with other treatments. Call or email us to learn more about pricing and financing options.</span>
+<div class="accordion"><span itemprop="name">HOW MUCH DOES IT COST TO GET LED THERAPY?</span></div>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">Laser therapy for hair loss final costs can vary according to how many diodes are in the laser cap and the number of sessions your custom treatment requires. Call or email us to learn more about pricing.</span>
 </div></div>
 
 <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name">WHERE IS THE BEST PLACE TO GET A LOW-LEVEL LIGHT THERAPY FOR HAIR LOSS IN BROOKLYN?</span></div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">At StudioMD Brooklyn we'll discuss all the different therapies, procedures, and products that may be most effective for your individual case. We’ll come up with a treatment plan that really helps your hair loss. And if you’re considering LLLT or wondering if it’s the right treatment option for you, book an appointment today and we’ll be happy to see you about your hair.</span>
+<div class="accordion"><span itemprop="name">WHERE IS THE BEST PLACE TO GET LOW-LEVEL LIGHT THERAPY FOR HAIR LOSS IN LONG ISLAND?</span></div>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">StudioMD Long Island offers a variety of low-level light treatments that have helped many patients to increase hair counts and boosted hair thickness. Our state-of-the-art treatments have helped many patients to improve their appearance and confidence levels. If you have struggled with hair loss and unsuccessful treatments, book an appointment today and consider giving natural LLLT a try.</span>
 </div></div>
 
 </div>
